  * sbuild:
    - Distinguish between failed/attempted builds (Closes: #538083).
    - Build directory cleaned under all failure conditions
      (Closes: #538085).
    - --apt-update both updates and upgrades the chroot
      (Closes: #521096).  Thanks to Gustavo Noronha Silva for this
      patch.  Note the original bug report 'get_apt_command' error
      was fixed on the 17th March 2009.
  * Allow setting of $build_dir in sbuild.conf (Closes: #535911).
    Thanks to Andres Mejia for this patch.
  * 

 -- Roger Leigh <rleigh@debian.org>  Fri, 06 Nov 2009 23:15:57 +0000

sbuild (0.59.0-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release. 
  * Use version comparison functions in WannaBuild::Database
    (Closes: #521486).  Thanks to Florian Weimer. 
  * WannaBuild::Database: Allow whitespace in Architecture field
    (Closes: #535415).  Thanks to John Wright for this patch. 
  * Sbuild::Build, WannaBuild::Database: Add support for architecture
    aliases/wildcards (Closes: #501230).  Thanks to Andres Mejia for
    these patches. 
  * Sbuild::Conf doesn't require STATS_DIR to exist, and
    Sbuild::Build::write_stats only uses STATS_DIR in batch mode
    (Closes: #539570).

 -- Roger Leigh <rleigh@debian.org>  Sun, 02 Aug 2009 11:15:26 +0100

sbuild (0.58.6-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * debian/control: Update package descriptions to use correct
    English in full sentences (Closes: #531022).  Thanks to
    Gerfried Fuchs for pointing this out.
  * Don't include Epoch in DSC filename (Closes: #529786).  Thanks
    to Gustavo Noronha Silva for spotting this.

 -- Roger Leigh <rleigh@debian.org>  Sat, 20 Jun 2009 10:48:45 +0100

sbuild (0.58.5-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * Install README.Debian in sbuild package (rename to
    debian/sbuild.README.Debian, Closes: #533029).
  * debian/sbuild.install: Don't install Perl modules, which should